# Quotient

./: .gitignore  ARCHITECTURE.md  PRIVACY_POLICY.md  README.md  build.yaml  pubspec.yaml
.github/workflows/: deploy_android_build.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
lib/: app.dart  main.dart
lib/config/: routes.dart
lib/core/constants/: constants.dart
lib/core/enum/: app_theme.dart  category_types.dart
lib/core/extensions/: category_extension.dart  expense_extensions.dart
lib/core/widgets/: choose_theme_mode_widget.dart  variable_fab_size.dart
lib/core/widgets/paisa_widgets/: paisa_user_image_widget.dart
lib/dependency_injection/module/: hive_module.dart
lib/features/category/data/data_sources/: default_category.dart
lib/features/category/data/model/: category_model.dart
lib/features/category/data/repository/: category_repository_impl.dart
lib/features/category/domain/entities/: category.dart
lib/features/category/domain/repository/: category_repository.dart
lib/features/intro/: user_onboarding_page.dart
lib/localization/: app_be.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_kn.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_vi.arb  app_zh.arb  app_zh_TW.arb
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: logs.rs  mod.rs
rust/src/api/db/: db.rs  mod.rs  profile.rs  settings.rs
web/: index.html  manifest.json
windows/flutter/: generated_plugins.cmake
(+35 files in other folders)
