[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
flutter_rust_bridge = "=2.0.0-dev.23"
serde = { version = "1.0.196", features = ["derive"] }
sled = "0.34.7"
snowdon = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
